# pathfinder

./: .gitignore  Cargo.toml  README.md
src/: analyzer.rs  cli.rs  lib.rs  main.rs  resolver.rs  symlink.rs  version.rs
src/output/: human.rs  json.rs  mod.rs  plain.rs
src/platform/: mod.rs  unix.rs  windows.rs
tests/: integration.rs
