[package]
name = "pathfinder"
version = "0.1.0"
edition = "2021"
description = "Debug command resolution and PATH issues"
license = "MIT"
authors = ["Katie"]

[dependencies]
clap = { version = "4", features = ["derive"] }
colored = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
atty = "0.2"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
